--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,11 +40,11 @@
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_60sdp"
                     android:contentDescription="@string/logo"
-                    android:src="@drawable/call_logo"
+                    android:src="@drawable/phonecall"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/textBlue" />
+                    />
 
                 <TextView
                     android:id="@+id/labelSmartCall"
@@ -83,6 +83,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="invisible"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutId">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -95,6 +96,29 @@
                         app:layout_constraintTop_toBottomOf="@id/edtUserID" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+             <!--UserName-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/inputLayoutUserName"
+                    style="@style/text_input_layout"
+                    android:layout_marginTop="@dimen/_15sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/inputLayoutId">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtUserName"
+                        style="@style/editTextStyle"
+                        android:inputType="text"
+                        android:hint="@string/enter_user_name"
+                        android:maxLength="12"
+                        android:maxLines="1"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/edtUserID" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
 
 
                 <com.google.android.material.button.MaterialButton
