Default Password Edit text removed from RegisterPasswordActivity

--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <com.google.android.material.textfield.TextInputLayout
+             <!--   <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputLayoutDefaultPassword"
                     style="@style/text_input_layout"
                     android:layout_marginTop="@dimen/_80sdp"
@@ -47,15 +47,15 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/edtUserID" />
 
-                </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>-->
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputLayoutSetPassword"
                     style="@style/text_input_layout"
-                    android:layout_marginTop="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_80sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/inputLayoutDefaultPassword">
+                   app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edtSetPassword"
