LoginWithUserCredentialsFragment , added textview ForgotPassword

--- a/app/src/main/res/layout/fragment_login_with_user_credentials.xml
+++ b/app/src/main/res/layout/fragment_login_with_user_credentials.xml
@@ -50,6 +50,17 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/labelForgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:text="@string/forgot_password"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp"
+            app:layout_constraintEnd_toEndOf="@id/inputLayoutUserPassword"
+            app:layout_constraintTop_toBottomOf="@id/inputLayoutUserPassword" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnProceed"
@@ -58,7 +69,7 @@
             android:text="@string/proceed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/inputLayoutUserPassword" />
+            app:layout_constraintTop_toBottomOf="@id/labelForgotPassword" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
