--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -51,6 +51,17 @@
                 app:layout_constraintStart_toEndOf="@id/labelStatus"
                 app:layout_constraintTop_toTopOf="parent" />
 
+              <ImageView
+                  android:id="@+id/ivStatusInfo"
+                  app:layout_constraintStart_toEndOf="@id/txtStatus"
+                  app:layout_constraintTop_toTopOf="@id/txtStatus"
+                  app:layout_constraintBottom_toBottomOf="@id/txtStatus"
+                  android:layout_marginStart="@dimen/_5sdp"
+                  android:src="@drawable/status_info"
+                  android:layout_width="@dimen/_20sdp"
+                  android:layout_height="@dimen/_20sdp"/>
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
