--- a/app/src/main/res/layout/activity_details_of_customer2.xml
+++ b/app/src/main/res/layout/activity_details_of_customer2.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/customer_details"
+                android:text="@string/calling_npa_customer"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
