In customDialogSearchDate when calendar icon is clicked , added ImageView for closing dialog , used in ScheduleDetailsActivity & StatusOfCustomerActivity

--- a/app/src/main/res/layout/custom_dialog_search_date.xml
+++ b/app/src/main/res/layout/custom_dialog_search_date.xml
@@ -37,8 +37,20 @@
                     android:textSize="@dimen/_13ssp"
                     android:textStyle="normal" />
 
-
             </androidx.appcompat.widget.Toolbar>
+
+            <ImageView
+                android:id="@+id/ivClose"
+                app:layout_constraintEnd_toEndOf="@id/toolbar"
+                app:layout_constraintTop_toTopOf="@id/toolbar"
+                app:layout_constraintBottom_toBottomOf="@id/toolbar"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:src="@drawable/cancel_close"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                app:tint="@color/white" />
+
+
 
             <TextView
                 android:id="@+id/txtFromDate"
