--- a/app/src/main/res/layout/item_loan_collection.xml
+++ b/app/src/main/res/layout/item_loan_collection.xml
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_2sdp"
-                tools:text=" Active"
+                tools:text=" IN-PROCESS"
                 android:textStyle="normal"
                 app:layout_constraintStart_toEndOf="@id/labelStatus"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +57,7 @@
                   app:layout_constraintTop_toTopOf="@id/txtStatus"
                   app:layout_constraintBottom_toBottomOf="@id/txtStatus"
                   android:layout_marginStart="@dimen/_5sdp"
-                  android:src="@drawable/status_info2"
+                  android:src="@drawable/status_info3"
                   android:layout_width="@dimen/_20sdp"
                   android:layout_height="@dimen/_20sdp"/>
 
