--- a/app/src/main/res/layout/activity_status_of_customer.xml
+++ b/app/src/main/res/layout/activity_status_of_customer.xml
@@ -64,7 +64,8 @@
         android:id="@+id/rvStatusOfCustomerDetails"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivBack"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="@dimen/_10sdp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_marginStart="@dimen/_5sdp"
@@ -72,7 +73,7 @@
         tools:itemCount="3"
         tools:listitem="@layout/item_status_details_of_customer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
